name: swarm-bencode
version: 0.1.0.0
synopsis: A BEncode library.
description: A BEncode parsing and enconding library.
             Modelled after aeson.
homepage: http://github.com/drdo/swarm-bencode
license: MIT
license-file: LICENSE
author: Daniel Rebelo de Oliveira
maintainer: drdo@drdo.eu
category: Data
build-type: Simple
cabal-version: >=1.10
library
  exposed-modules: Data.BEncode,
                   Data.BEncode.Builder,
                   Data.BEncode.Parser,
                   Data.BEncode.Types
  default-language: Haskell2010
  other-extensions: FlexibleInstances,
                    LambdaCase,
                    OverloadedStrings,
                    RankNTypes,
                    UnicodeSyntax
  build-depends: attoparsec >=0.10,
                 base >=4.5 && <5, 
                 bytestring >=0.10.2,
                 containers >=0.5.3,
                 utf8-string >=0.3
